# Projeto/routes/estacionamentosParqueRoutes.js
@@ -5,12 +5,33 @@ const router = express.Router();
 const parque_controller = require('../controllers/estacionamentosParqueController');
 const parques_controller = require('../controllers/estacionamentosParqueControllercopy');
 
+//route Apaga estacionamentos
+router.route("/DelEstacionamentos").delete(parques_controller.DelEstacionamentos);
+
+//route Reset ao parque
+router.route("/ResetParque/:n").put(parque_controller.ResetParque);
+
+//route Lugares Vagos
+//router.route("/LugaresVagos").get(parque_controller.LugaresVagos);
+
+//route Registo de entrada de um carro
+//router.route("/RegistaEntrada/:matricula").put(parques_controller.RegistaEntrada);
+router.route("/RegistaEntrada/:matricula&:datatestes").put(parques_controller.RegistaEntrada);//aqui apagar
+
+//route Registo de saida de um carro
+//router.route("/RegistaSaida").put(parque_controller.RegistaSaida);
+
 //route media
 router.route("/Media/:periodo").get(parque_controller.MediaCarros);
 
+//route quantos carros entraram num certo dia
+//router.route("/QtdDia/:data").get(parques_controller.QtdDia);
+
+//route quantos carros nao registados entraram num certo dia 
+//router.route("/QtsNRegistado/:data").get(parques_controller.QtsNRegistado);
+
 //route MaisCarros
 //router.route("/DiaMaisCarros").get(parque_controller.MaiorDia);
-
 
 //route MenosCarros
 //router.route("/MenorDia").get(parques_controller.MenorDia);
@@ -20,26 +41,6 @@ router.route("/Media/:periodo").get(parque_controller.MediaCarros);
 
 //route numero de carros num periudo
 //router.route("/CarrosPeriodo/:DataInicio&:DataFim").get(parque_controller.QtdPeriodo);
-
-//route Registo de saida de um carro
-//router.route("/RegistaSaida").put(parque_controller.RegistaSaida);
-
-//route Lugares Vagos
-//router.route("/LugaresVagos").get(parque_controller.LugaresVagos);
-
-
-//route Reset ao parque
-router.route("/ResetParque/:n").put(parque_controller.ResetParque);
-
-//route quantos carros entraram num certo dia
-//router.route("/QtdDia/:data").get(parques_controller.QtdDia);
-
-//route quantos carros nao registados entraram num certo dia 
-//router.route("/QtsNRegistado/:data").get(parques_controller.QtsNRegistado);
-
-//route Registo de saida de um carro
-//router.route("/RegistaEntrada/:matricula").put(parques_controller.RegistaEntrada);
-router.route("/RegistaEntrada/:matricula&:datatestes").put(parques_controller.RegistaEntrada);//aqui apagar
 
 //route Registo de saida de um carro
 //router.route("/DiasLotado").post(parques_controller.DiasLotado);
